--- a/articles/service-fabric-mesh/index.yml
+++ b/articles/service-fabric-mesh/index.yml
@@ -11,14 +11,14 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 06/26/2018
+  ms.date: 07/17/2018
   ms.author: ryanwi
-  ms.openlocfilehash: fccd805f6d4abcf7005fca0cc6f4d368ac5764f1
-  ms.sourcegitcommit: e32ea47d9d8158747eaf8fee6ebdd238d3ba01f7
+  ms.openlocfilehash: d2f0a847bdc0d26ff44013e3dbe1c2c6acd0c54d
+  ms.sourcegitcommit: b9786bd755c68d602525f75109bbe6521ee06587
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 07/17/2018
-  ms.locfileid: "39090051"
+  ms.lasthandoff: 07/18/2018
+  ms.locfileid: "39124872"
 abstract:
   description: Azure Service Fabric Mesh är en helt hanterad tjänst som gör det möjligt för utvecklare att skapa och distribuera verksamhetskritiska program utan att behöva hantera någon infrastruktur.  Använd Service Fabric Mesh för att skapa och köra säkra, distribuerade mikrotjänstprogram som kan skalas på begäran. Lär dig att använda Service Fabric Mesh med hjälp av våra snabbstarter och självstudier.  Mer information finns i denna <a href="/azure/service-fabric-mesh/service-fabric-mesh-overview">översikt över Service Fabric Mesh</a>.
 sections:
@@ -35,13 +35,13 @@ sections:
       href: /azure/service-fabric-mesh/service-fabric-mesh-quickstart-deploy-container
     - image:
         src: https://docs.microsoft.com/media/logos/logo_netcore.svg
-      text: Skapa och distribuera en webbapp
+      text: Skapa och distribuera en webbapp till Service Fabric Mesh
       href: /azure/service-fabric-mesh/service-fabric-mesh-quickstart-dotnet-core
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: Lär dig att skapa, felsöka och distribuera en Azure Service Fabric Mesh-app.
+    text: Lär dig att skapa, felsöka och distribuera en Azure Service Fabric Mesh-app för flera tjänster.
   - type: list
     style: unordered
     items:
-    - html: <a href="/azure/service-fabric-mesh/service-fabric-mesh-tutorial-create-dotnetcore">Distribuera ett a .NET Core-program</a>
+    - html: <a href="/azure/service-fabric-mesh/service-fabric-mesh-tutorial-create-dotnetcore">Skapa, felsöka och distribuera en webbapp för flera tjänster till Service Fabric Mesh</a>
