--- a/articles/security/breadcrumb/TOC.yml
+++ b/articles/security/breadcrumb/TOC.yml
@@ -4,11 +4,11 @@
   items:
     - name: Säkerhet
       tocHref: /azure/
-      tpicHref: /azure/security/index
+      topicHref: /azure/security/index
 - name: Azure
   tocHref: /architecture/
   topicHref: /azure/index
   items:
     - name: Säkerhet
       tocHref: /architecture/azure/
-      topicHref: /azure/security/
+      topicHref: /azure/security/index
