--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -15,7 +15,7 @@
   items:
     - name: 1 – Förbereda program för AKS
       href: tutorial-kubernetes-prepare-app.md
-    - name: 2 – Skapa behållarregister
+    - name: 2 – Skapa containerregister
       href: tutorial-kubernetes-prepare-acr.md
     - name: 3 – Skapa Kubernetes-kluster
       href: tutorial-kubernetes-deploy-cluster.md
@@ -49,6 +49,8 @@
           href: aad-integration.md
         - name: Använda Virtual Kubelet
           href: virtual-kubelet.md
+        - name: Använda klusterautoskalning
+          href: autoscaler.md
         - name: Distribuera AKS med Terraform
           href: ../terraform/terraform-create-k8s-cluster-with-tf-and-aks.md
           maintainContext: true
@@ -68,7 +70,7 @@
           href: networking-overview.md
         - name: Statisk IP-adress
           href: static-ip.md
-        - name: Intern belastningsutjämnare
+        - name: Intern lastbalanserare
           href: internal-lb.md
         - name: Ingångshändelser och TLS
           href: ingress.md
@@ -84,7 +86,7 @@
           href: ../container-registry/container-registry-auth-aks.md?toc=%2fazure%2faks%2ftoc.json
     - name: Övervakning och loggning
       items:
-        - name: Hälsolösning för Azure-behållare
+        - name: Hälsolösning för Azure-containrar
           href: ../monitoring/monitoring-container-health.md
           maintainContext: true
     - name: Utveckla och köra program
