--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -82,6 +82,8 @@
           href: supported-search-categories.md
     - name: REST
       items:
+        - name: Geoplatstjänst
+          href: 'https://docs.microsoft.com/rest/api/maps/geolocation'
         - name: Renderingstjänst
           href: 'https://docs.microsoft.com/rest/api/maps/render'
         - name: Routningstjänst
