--- a/articles/iot-accelerators/index.yml
+++ b/articles/iot-accelerators/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 06/19/2018
   ms.author: dobett
-  ms.openlocfilehash: ab97a3a2579be289f1d88d926fc2151cb4d2ad4f
-  ms.sourcegitcommit: d1eefa436e434a541e02d938d9cb9fcef4e62604
+  ms.openlocfilehash: 23eeb56e071eb06d4a740e268c1de29f96dd05d8
+  ms.sourcegitcommit: 727a0d5b3301fe20f20b7de698e5225633191b06
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 06/28/2018
-  ms.locfileid: "37088324"
+  ms.lasthandoff: 07/19/2018
+  ms.locfileid: "39143997"
 abstract:
   description: Kom igång snabbt med att bygga dina IoT-lösningar med IoT-lösningsacceleratorer. Lägg till nya enheter och anslut befintliga, med hjälp av enhets-SDK:er för flera plattformar, inklusive Linux, Windows och operativsystem i realtid. Gå från några sensorer till miljontals samtidigt anslutna enheter, och förlita dig på Azures globala tillgänglighet, oavsett projektets storlek.
 sections:
@@ -29,7 +29,10 @@ sections:
   - type: list
     style: unordered
     items:
-    - html: <a href="/azure/iot-accelerators/quickstart-remote-monitoring-deploy">Distribuera en molnbaserad fjärrövervakningslösning</a>
+    - html: <a href="/azure/iot-accelerators/quickstart-remote-monitoring-deploy">Testa en molnbaserad fjärrövervakningslösning</a>
+    - html: <a href="/azure/iot-accelerators/quickstart-predictive-maintenance-deploy">Testa en molnbaserad lösning för förutsägande underhåll</a>
+    - html: <a href="/azure/iot-accelerators/quickstart-connected-factory-deploy">Testa en molnbaserad lösning för ansluten fabrik</a>
+    - html: <a href="/azure/iot-accelerators/quickstart-device-simulation-deploy">Testa en molnbaserad lösning för enhetssimulering</a>
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
