--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -89,14 +89,6 @@
       href: /powershell/module/azurerm.eventgrid
     - name: REST
       href: /rest/api/eventgrid
-    - name: Mallresurser
-      items:
-        - name: Prenumerationer på händelser
-          href: /azure/templates/microsoft.eventgrid/eventsubscriptions
-        - name: Ämnen
-          href: /azure/templates/microsoft.eventgrid/topics
-    - name: 'SDK:er'
-      href: sdk-overview.md
     - name: Prenumerationsschema
       href: subscription-creation-schema.md
     - name: Händelseschema
@@ -106,6 +98,8 @@
           href: event-schema-subscriptions.md
         - name: Blob Storage
           href: event-schema-blob-storage.md
+        - name: Container Registry
+          href: event-schema-container-registry.md
         - name: Event Hubs
           href: event-schema-event-hubs.md
         - name: IoT Hub
@@ -116,6 +110,14 @@
           href: event-schema-resource-groups.md
         - name: Service Bus
           href: event-schema-service-bus.md
+    - name: Mallresurser
+      items:
+        - name: Prenumerationer på händelser
+          href: /azure/templates/microsoft.eventgrid/eventsubscriptions
+        - name: Ämnen
+          href: /azure/templates/microsoft.eventgrid/topics
+    - name: 'SDK:er'
+      href: sdk-overview.md
 - name: Resurser
   items:
     - name: Azure-översikt
