--- a/articles/event-hubs/index.yml
+++ b/articles/event-hubs/index.yml
@@ -12,12 +12,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 05/14/2018
   ms.author: sethm
-  ms.openlocfilehash: 481a11b284f0bfba73fe8a44b640eac0cdc6f833
-  ms.sourcegitcommit: 756f866be058a8223332d91c86139eb7edea80cc
+  ms.openlocfilehash: 84ef019b64bba2d5b581593ae293ea612ecb4bc4
+  ms.sourcegitcommit: 4e5ac8a7fc5c17af68372f4597573210867d05df
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 07/02/2018
-  ms.locfileid: "37344071"
+  ms.lasthandoff: 07/20/2018
+  ms.locfileid: "39170940"
 abstract:
   description: Azure Event Hubs är en dataströmningsplattform och händelsebearbetningstjänst som kan ta emot och bearbeta flera miljoner händelser per sekund. Tjänsten stöder HTTPS- och AMQP 1.0-protokoll och Apache Kafka-ekosystemet för händelsepublicering.
   aside:
@@ -56,7 +56,7 @@ sections:
   - type: list
     style: unordered
     items:
-    - html: <a href="https://review.docs.microsoft.com/en-us/azure/event-hubs/event-hubs-tutorial-visualize-anomalies?branch=release-mvc-event-hubs">Läsa en Event Hubs-dataström med Azure Stream Analytics och visualisera avvikelserna</a>
+    - html: <a href="https://docs.microsoft.com/en-us/azure/event-hubs/event-hubs-tutorial-visualize-anomalies">Läsa en Event Hubs-dataström med Azure Stream Analytics och visualisera avvikelserna</a>
 - title: Kostnadsfri videoutbildning för Pluralsight
   items:
   - type: list
