--- a/articles/role-based-access-control/TOC.yml
+++ b/articles/role-based-access-control/TOC.yml
@@ -41,6 +41,8 @@
           href: role-assignments-cli.md
         - name: REST-API
           href: role-assignments-rest.md
+        - name: Mall
+          href: role-assignments-template.md
     - name: Anpassade roller
       href: custom-roles.md
       items:
