--- a/articles/jenkins/toc.yml
+++ b/articles/jenkins/toc.yml
@@ -13,7 +13,6 @@
   items:
     - name: CI/CD till App Service
       href: /azure/jenkins/java-deploy-webapp-tutorial
-      maintainContext: true
     - name: CI/CD till Kubernetes
       href: /azure/container-service/kubernetes/container-service-kubernetes-jenkins
       maintainContext: true
@@ -22,13 +21,13 @@
       maintainContext: true
     - name: Skapa Azure-resurser i ett pipeline-jobb
       href: /azure/jenkins/execute-cli-jenkins-pipeline
-      maintainContext: true
     - name: Skala med Azure VM-agenter
       href: /azure/jenkins/jenkins-azure-vm-agents
-      maintainContext: true
     - name: Skapa med hjälp av Azure Container Instances
       href: /azure/container-instances/container-instances-jenkins
       maintainContext: true
+    - name: Distribuera till AKS med hjälp av blått/grönt mönster
+      href: /azure/jenkins/jenkins-aks-blue-green-deployment
 - name: Så här gör du
   items:
     - name: Säker Jenkins på Azure
