--- a/articles/azure-stack/TOC.yml
+++ b/articles/azure-stack/TOC.yml
@@ -6,14 +6,12 @@
       href: azure-stack-poc.md
     - name: Viktig information
       items:
-        - name: 1805 uppdatering
+        - name: 1805 update
           href: azure-stack-update-1805.md
-        - name: 1804 uppdatering
+        - name: 1804 update
           href: azure-stack-update-1804.md
-        - name: 1803 uppdatering
+        - name: 1803 update
           href: azure-stack-update-1803.md
-        - name: 1802 uppdatering
-          href: azure-stack-update-1802.md
 - name: Snabbstarter
   expanded: true
   items:
@@ -31,17 +29,17 @@
   items:
     - name: Datacenter-integrering
       items:
-        - name: Överväganden för allmänna Azure Stack-integration
+        - name: Överväganden för allmänna Azure Stack-integrering
           href: azure-stack-datacenter-integration.md
-        - name: Azure Stack anslutning distributionsmodeller
+        - name: Azure Stack-anslutning distributionsmodeller
           href: azure-stack-connection-models.md
-        - name: Överväganden vid anslutna distribution
+        - name: Anslutna distributionsöverväganden
           href: azure-stack-connected-deployment.md
-        - name: Överväganden vid frånkopplade distribution
+        - name: Frånkopplade distributionsöverväganden
           href: azure-stack-disconnected-deployment.md
-        - name: Datacenter nätverksintegration
+        - name: Datacenter nätverksintegrering
           items:
-            - name: Integrering av nätverk
+            - name: Nätverksintegrering
               href: azure-stack-network.md
             - name: Kantlinje anslutning
               href: azure-stack-border-connectivity.md
@@ -54,9 +52,9 @@
                   href: azure-stack-integrate-endpoints.md
         - name: Identitetsintegrering
           items:
-            - name: Välj en identitetsleverantör
+            - name: Välj en identitetsprovider
               href: azure-stack-integrate-identity.md
-            - name: Verifiera Azure identitet
+            - name: Verifiera Azure identity
               href: azure-stack-validate-identity.md
         - name: Azure Stack PKI distributionskrav
           href: azure-stack-pki-certs.md
@@ -65,7 +63,7 @@
               href: azure-stack-get-pki-certs.md
             - name: Förbered Azure Stack PKI-certifikat
               href: azure-stack-prepare-pki-certs.md
-            - name: Validera PKI-certifikat
+            - name: Verifiera PKI-certifikat
               href: azure-stack-validate-pki-certs.md
             - name: Åtgärda PKI-certifikat
               href: azure-stack-remediate-certs.md
@@ -73,16 +71,16 @@
           items:
             - name: Om distributionen nätverk
               href: deployment-networking.md
-        - name: Verifiera Azure registrering
+        - name: Verifiera Azure-registrering
           href: azure-stack-validate-registration.md
           items:
             - name: Start-AzsReadiness cmdlet-referens
               href: azure-stack-azsreadiness-cmdlet.md
-            - name: Visa beredskapsrapporten
+            - name: Visa rapport om distributionsberedskap
               href: azure-stack-validation-report.md
         - name: Externa övervakning
           href: azure-stack-integrate-monitor.md
-        - name: Integrering av säkerhet
+        - name: Security-integrering
           href: azure-stack-integrate-security.md
     - name: Hanteringsprincip
       href: azure-stack-servicing-policy.md
@@ -92,7 +90,7 @@
       href: azure-stack-manage-basics.md
 - name: Instruktionsguider
   items:
-    - name: Konfigurera telemetri samling
+    - name: Konfigurera insamling av enhetstelemetri
       href: azure-stack-telemetry.md
     - name: Registrera Azure Stack
       href: azure-stack-registration.md
@@ -122,13 +120,13 @@
               href: azure-stack-updates.md
             - name: Tillämpa uppdateringar
               href: azure-stack-apply-updates.md
-            - name: Övervakaren uppdateringsstatus
+            - name: Övervakarstatus för säkerhetsuppdatering
               href: azure-stack-monitor-update.md
         - name: Övervaka hälsotillstånd och aviseringar
           href: azure-stack-monitor-health.md
         - name: Hantera nätverksresurser
           href: azure-stack-viewing-public-ip-address-consumption.md
-        - name: Ändra användare prenumeration ägare
+        - name: Ändra användare Prenumerationens ägare
           href: azure-stack-change-subscription-owner.md
         - name: Starta och stoppa Azure Stack
           href: azure-stack-start-and-stop.md
@@ -136,9 +134,9 @@
           items:
             - name: Hantera lagringsresurser
               href: azure-stack-manage-storage-accounts.md
-            - name: Hantera lagringskapacitet
+            - name: Hantera kapacitet
               href: azure-stack-manage-storage-shares.md
-            - name: Hantera fysiskt minneskapacitet
+            - name: Hantera kapacitet för fysiskt minne
               href: azure-stack-manage-storage-physical-memory-capacity.md
         - name: Ersätta maskinvara
           items:
@@ -153,13 +151,13 @@
         - name: Säkerhetskopiera Azure Stack
           href: azure-stack-backup-infrastructure-backup.md
           items:
-            - name: Aktivera säkerhetskopiering för Azure-Stack från administrationskonsolen
+            - name: Aktivera säkerhetskopiering för Azure Stack från administrationskonsolen
               href: azure-stack-backup-enable-backup-console.md
-            - name: Aktivera säkerhetskopiering för Azure-stacken med PowerShell
+            - name: Aktivera säkerhetskopiering för Azure Stack med PowerShell
               href: azure-stack-backup-enable-backup-powershell.md
             - name: Säkerhetskopiera Azure Stack
               href: azure-stack-backup-back-up-azure-stack.md
-            - name: Säkerhetskopiera filer och program på Azure-stacken
+            - name: Säkerhetskopiera filer och program på Azure Stack
               href: ..\backup\backup-mabs-files-applications-azure-stack.md?toc=%2fazure%2fazure-stack%2ftoc.json
             - name: Återställa från oåterkallelig dataförlust
               href: azure-stack-backup-recover-data.md
@@ -173,9 +171,9 @@
           href: azure-stack-security-foundations.md
         - name: Identitet
           items:
-            - name: Översikt över identitet
+            - name: Identitetsöversikt
               href: azure-stack-identity-overview.md
-            - name: Identity-arkitektur
+            - name: Identitetsarkitektur
               href: azure-stack-identity-architecture.md
             - name: Hantera RBAC
               href: azure-stack-manage-permissions.md
@@ -201,7 +199,7 @@
               href: azure-stack-plan-offer-quota-overview.md
             - name: Skapa en plan
               href: azure-stack-create-plan.md
-            - name: Skapa en plan för tillägg
+            - name: Skapa en tilläggsplan
               href: create-add-on-plan.md
             - name: Skapa ett erbjudande
               href: azure-stack-create-offer.md
@@ -213,35 +211,35 @@
               href: azure-stack-quota-types.md
         - name: Översikt över PaaS-tjänster
           href: azure-stack-tools-paas-services.md
-        - name: Erbjuda SQL som PaaS
+        - name: Erbjudande om SQL som PaaS
           href: azure-stack-sql-resource-provider.md
           items:
-            - name: Distribuera SQL Server-resursprovidern
+            - name: Distribuera SQL Server-resursprovider
               href: azure-stack-sql-resource-provider-deploy.md
-            - name: Lägg till SQL som värd för servrar
+            - name: Lägg till SQL som är värd för servrar
               href: azure-stack-sql-resource-provider-hosting-servers.md
             - name: Skapa SQL-databaser
               href: azure-stack-sql-resource-provider-databases.md
-            - name: Uppdatera SQL Server-resursprovidern
+            - name: Uppdatera SQL Server-resursleverantör
               href: azure-stack-sql-resource-provider-update.md
-            - name: Underhåll av SQL Server-resursprovidern
+            - name: Underhåll av SQL Server-resursleverantör
               href: azure-stack-sql-resource-provider-maintain.md
-            - name: Ta bort SQL Server-resursprovidern
+            - name: Ta bort SQL Server-resursleverantör
               href: azure-stack-sql-resource-provider-remove.md
         - name: Erbjudande MySQL som PaaS
           href: azure-stack-mysql-resource-provider.md
           items:
-            - name: Distribuera resursprovidern MySQL-Server
+            - name: Distribuera MySQL-Server-resursprovider
               href: azure-stack-mysql-resource-provider-deploy.md
-            - name: Lägg till MySQL som värd för servrar
+            - name: Lägg till MySQL som är värd för servrar
               href: azure-stack-mysql-resource-provider-hosting-servers.md
             - name: Skapa MySQL-databaser
               href: azure-stack-mysql-resource-provider-databases.md
-            - name: Uppdatera resursprovidern MySQL-Server
+            - name: Uppdatera MySQL-Server-resursleverantör
               href: azure-stack-mysql-resource-provider-update.md
-            - name: Underhåll MySQL-Server-resursprovidern
+            - name: Underhålla MySQL Server-resursleverantör
               href: azure-stack-mysql-resource-provider-maintain.md
-            - name: Ta bort MySQL-Server-resursprovidern
+            - name: Ta bort MySQL-Server-resursleverantör
               href: azure-stack-mysql-resource-provider-remove.md
         - name: Erbjudande om App Service som PaaS
           items:
@@ -251,23 +249,23 @@
               href: azure-stack-app-service-capacity-planning.md
             - name: Innan du börjar
               href: azure-stack-app-service-before-you-get-started.md
-            - name: Hur du distribuerar Azure App Service på Azure-stacken över feldomäner
+            - name: Hur du distribuera om Azure App Service i Azure Stack via feldomäner
               href: azure-stack-app-service-fault-domain-update.md
             - name: Distribuera App Service-resursprovider
               href: azure-stack-app-service-deploy.md
             - name: Distribuera App Service offline
               href: azure-stack-app-service-deploy-offline.md
-            - name: Uppdatera Apptjänst
+            - name: Uppdatera App Service
               href: azure-stack-app-service-update.md
-            - name: Uppdatera Apptjänst Offline
+            - name: Uppdatera App Service Offline
               href: azure-stack-app-service-update-offline.md
             - name: Lägga till fler webbarbetsroller
               href: azure-stack-app-service-add-worker-roles.md
             - name: Konfigurera distributionskällor
               href: azure-stack-app-service-configure-deployment-sources.md
-            - name: Apptjänst på Azure-stacken uppdatering 1 viktig information
+            - name: App Service i Azure Stack update 1 viktig information
               href: azure-stack-app-service-release-notes-update-one.md
-            - name: Apptjänst på Azure-stacken uppdatering 2 viktig information
+            - name: App Service i Azure Stack uppdatering 2 viktig information
               href: azure-stack-app-service-release-notes-update-two.md
         - name: Distribuera Ethereum
           href: azure-stack-ethereum.md
@@ -277,39 +275,39 @@
               href: azure-stack-marketplace.md
             - name: Ladda ned Marketplace-objekt
               href: azure-stack-download-azure-marketplace-item.md
-            - name: Azure Marketplace-objekt för Azure-Stack
+            - name: Azure Marketplace-objekt för Azure Stack
               href: azure-stack-marketplace-azure-items.md
             - name: Skapa och publicera ett Marketplace-objekt
               href: azure-stack-create-and-publish-marketplace-item.md
-            - name: Använd verktyget marketplace publishing
+            - name: Använd verktyget marketplace för publicering
               href: azure-stack-marketplace-publisher.md
-            - name: Gästoperativsystem stöds för Azure-Stack
+            - name: Kompatibla gästoperativsystem för Azure Stack
               href: azure-stack-supported-os.md
             - name: Lägg till en anpassad avbildning av virtuell dator
               href: azure-stack-add-vm-image.md
-            - name: Erbjuder en skaluppsättning för virtuell dator
+            - name: Erbjud en VM-skalningsuppsättning
               href: azure-stack-compute-add-scalesets.md
-            - name: Erbjudande virtuella Linux-datorer
+            - name: Erbjud Linux-datorer
               href: azure-stack-linux.md
             - name: Lägg till en virtuell dator för Red Hat
               href: azure-stack-redhat-create-upload-vhd.md
-            - name: Erbjuder ett Kubernetes kluster
+            - name: Erbjud ett Kubernetes-kluster
               href: azure-stack-solution-template-kubernetes-cluster-add.md
         - name: Användning och fakturering
           href: azure-stack-billing-and-chargeback.md
           items:
-            - name: Hantera användningen och fakturering som en Kryptografiprovider
+            - name: Hantera användning och fakturering som en Kryptografiprovider
               href: azure-stack-add-manage-billing-as-a-csp.md
               items:
                 - name: Lägg till klienter för användning och fakturering
                   href: azure-stack-csp-howto-register-tenants.md
-                - name: Hantera klient-registrering
+                - name: Hantera klientorganisationer
                   href: azure-stack-csp-ref-operations.md
-            - name: Användnings- och fakturering referens
+            - name: Användning och fakturering referens
               items:
                 - name: Rapportering av användningsdata
                   href: azure-stack-usage-reporting.md
-                - name: Användning rapporteringssystem för molntjänst-Providers
+                - name: Infrastruktur för rapportering för Molntjänstleverantörer användning
                   href: azure-stack-csp-ref-infrastructure.md
                 - name: API för provideranvändning
                   href: azure-stack-provider-resource-api.md
@@ -321,9 +319,9 @@
           items:
             - name: Ansluta med hjälp av VPN
               href: azure-stack-connect-vpn.md
-            - name: Om VPN-gateway
+            - name: Om VPN gateway
               href: azure-stack-vpn-gateway-about-vpn-gateways.md
-            - name: Inställningar för VPN-gateway
+            - name: VPN gateway-inställningar
               href: azure-stack-vpn-gateway-settings.md
             - name: Ansluta med ExpressRoute
               href: azure-stack-connect-expressroute.md
@@ -333,7 +331,7 @@
           href: azure-stack-troubleshooting.md
         - name: Diagnostik i Azure Stack
           href: azure-stack-diagnostics.md
-        - name: Verifieringen av Azure-stacken
+        - name: Verifieringen av Azure Stack
           href: azure-stack-diagnostic-test.md
 - name: Referens
   items:
@@ -347,11 +345,11 @@
       href: /azure/azure-stack/asdk/
 - name: Resurser
   items:
-    - name: Översikt över Azure Stack
+    - name: Azure Stack-översikt
       href: 'https://azure.microsoft.com/roadmap/?tag=azure-stack'
-    - name: Azure-stacken MSDN-forum
+    - name: Azure Stack MSDN-forum
       href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureStack'
-    - name: Azure-stacken dokumentationskommentarer
+    - name: Feedback om Azure Stack-dokumentation
       href: 'https://feedback.azure.com/forums/344565-azure-stack?category_id=160275'
     - name: Prisinformation
       href: 'https://azure.microsoft.com/overview/azure-stack/how-to-buy/'
