--- a/articles/dns/TOC.yml
+++ b/articles/dns/TOC.yml
@@ -45,7 +45,7 @@
       href: ../networking/disaster-recovery-dns-traffic-manager.md
 - name: Gör så här för att
   items:
-    - name: Skapa anpassad DNS-zon och -post – Azure CLI
+    - name: Skapa privat DNS-zon och -post – Azure CLI
       href: private-dns-getstarted-cli.md
     - name: Hantera DNS-zoner
       items:
