--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -30,6 +30,8 @@
   items:
     - name: Meddelanderoutning
       href: tutorial-routing.md
+    - name: Utför manuell redundans
+      href: tutorial-manual-failover.md
     - name: Konfigurera dina enheter
       href: tutorial-device-twins.md
     - name: Hantera uppdateringar av inbyggd programvara
@@ -124,19 +126,22 @@
   items:
     - name: Utveckla
       items:
-        - name: Använda SDK för IoT-enheter för C
-          href: iot-hub-device-sdk-c-intro.md
+        - name: 'Använd SDK:er för enhet och tjänst'
+          href: iot-hub-devguide-sdks.md
           items:
-            - name: Använda IoTHubClient
-              href: iot-hub-device-sdk-c-iothubclient.md
-            - name: Använda serialiseraren
-              href: iot-hub-device-sdk-c-serializer.md
-        - name: Utveckla för begränsade enheter
-          href: iot-hub-devguide-develop-for-constrained-devices.md
-        - name: Utveckla för mobila enheter
-          href: iot-hub-how-to-develop-for-mobile-devices.md
-        - name: Hantera anslutningar och tillförlitliga meddelandefunktioner
-          href: iot-hub-reliability-features-in-sdks.md
+            - name: Använda SDK för IoT-enheter för C
+              href: iot-hub-device-sdk-c-intro.md
+              items:
+                - name: Använda IoTHubClient
+                  href: iot-hub-device-sdk-c-iothubclient.md
+                - name: Använda serialiseraren
+                  href: iot-hub-device-sdk-c-serializer.md
+            - name: Utveckla för begränsade enheter
+              href: iot-hub-devguide-develop-for-constrained-devices.md
+            - name: Utveckla för mobila enheter
+              href: iot-hub-how-to-develop-for-mobile-devices.md
+            - name: Hantera anslutningar och tillförlitliga meddelandefunktioner
+              href: iot-hub-reliability-features-in-sdks.md
         - name: Fråga Avro-data från en hubbväg
           href: iot-hub-query-avro-data.md
         - name: Skicka meddelanden från moln till enhet
