--- a/articles/iot-accelerators/toc.yml
+++ b/articles/iot-accelerators/toc.yml
@@ -44,6 +44,12 @@
       items:
         - name: Arkitektur
           href: iot-accelerators-connected-factory-sample-walkthrough.md
+    - name: Enhetssimulering
+      items:
+        - name: Schema för enhetsmodell
+          href: iot-accelerators-device-simulation-device-schema.md
+        - name: Beteende för enhetsmodell
+          href: iot-accelerators-device-simulation-device-behavior.md
     - name: Behörigheter på azureiotsolutions.com
       href: iot-accelerators-permissions.md
 - name: Instruktionsguider
